--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,13 @@ project(flay)
 
 # Source files for flay.
 set(FLAY_SOURCES
-  ${CMAKE_CURRENT_SOURCE_DIR}/options.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/flay.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/core/target.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/core/program_info.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/options.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/flay.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/execution_state.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/program_info.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/stepper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/symbolic_executor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/target.cpp
 )
 
 # Flay libraries.
