--- a/targets/v1model/CMakeLists.txt
+++ b/targets/v1model/CMakeLists.txt
@@ -9,6 +9,7 @@ set(
   FLAY_SOURCES
   ${FLAY_SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/program_info.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/stepper.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/target.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/v1model.cpp
   PARENT_SCOPE
