--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(FLAY_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/core/state_utils.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/stepper.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/symbolic_executor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/table_executor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/target.cpp
 )
 
