Table cleanup. Slowly.

--- a/targets/v1model/CMakeLists.txt
+++ b/targets/v1model/CMakeLists.txt
@@ -8,9 +8,11 @@ endif()
 set(
   FLAY_SOURCES
   ${FLAY_SOURCES}
+  ${CMAKE_CURRENT_SOURCE_DIR}/expression_resolver.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/program_info.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/stepper.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/target.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/table_executor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/v1model.cpp
   PARENT_SCOPE
 )
