--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -35,10 +35,15 @@ jobs:
 
     - name: Pull P4C and link Flay.
       run: |
-        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ -b fruffy/refactoring_2 $GITHUB_WORKSPACE/../p4c
+        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ $GITHUB_WORKSPACE/../p4c
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
 
     - name: Build (Ubuntu 20.04)
       run: |
         tools/ci-build.sh
       working-directory: ../p4c
+
+    - name: Test
+      run: |
+        ctest -R flay/ --output-on-failure --schedule-random
+      working-directory: ../p4c/build
