--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -8,7 +8,7 @@ on:
 
 # Cancel any preceding run on the pull request.
 concurrency:
-  group: build-flay-${{ github.event.pull_request.number || github.ref }}
+  group: test-flay-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
 jobs:
