--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -45,5 +45,5 @@ jobs:
 
     - name: Test
       run: |
-        ctest -R flay/ --output-on-failure --schedule-random
+        ctest -R flay- --output-on-failure --schedule-random
       working-directory: ../p4c/build
