--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Pull P4C and link Flay.
       run: |
-        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ -b fruffy/core_refactoring $GITHUB_WORKSPACE/../p4c
+        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ -b fruffy/refactoring $GITHUB_WORKSPACE/../p4c
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
 
     - name: Build (Ubuntu 20.04)
