Draft a Flay gRPC client.

--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Build (Ubuntu 22.04)
       run: |
-        sudo apt install libc-ares-dev libre2-dev # Needed for gRPC.
+        sudo apt-get install libc-ares-dev libre2-dev # Needed for gRPC.
         tools/ci-build.sh
       working-directory: ../p4c
 
