--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,54 +1,14 @@
 # CMake file for P4Flay.
-
-include(common)
-
 project(flay)
+
+# Add cmake directory to our module path. Also add cmake directory from P4C
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 
 # Declare common P4Flay variables.
 set(FLAY_DIR ${P4C_BINARY_DIR}/flay)
 set(FLAY_DRIVER "${CMAKE_CURRENT_BINARY_DIR}/p4flay")
 
-message("APPENDING ${CMAKE_MODULE_PATH}")
-
-# ############### gRPC TODO: gRPC is horribly bloated and messes up the entire installation. Find a
-# simple way to add this awful dependency.
-set(FETCHCONTENT_QUIET_PREV ${FETCHCONTENT_QUIET})
-set(FETCHCONTENT_QUIET OFF)
-set(gRPC_BUILD_GRPC_CPP_PLUGIN ON CACHE BOOL "Build grpc_cpp_plugin")
-set(gRPC_BUILD_GRPC_CSHARP_PLUGIN OFF CACHE BOOL "Build grpc_csharp_plugin")
-set(gRPC_BUILD_CSHARP_EXT OFF CACHE BOOL "Build C# extensions")
-set(gRPC_BUILD_GRPC_NODE_PLUGIN OFF CACHE BOOL "Build grpc_node_plugin")
-set(gRPC_BUILD_GRPC_OBJECTIVE_C_PLUGIN OFF CACHE BOOL "Build grpc_objective_c_plugin")
-set(gRPC_BUILD_GRPC_PHP_PLUGIN OFF CACHE BOOL "Build grpc_php_plugin")
-set(gRPC_BUILD_GRPC_PYTHON_PLUGIN OFF CACHE BOOL "Build grpc_python_plugin")
-set(gRPC_BUILD_GRPC_RUBY_PLUGIN OFF CACHE BOOL "Build grpc_ruby_plugin")
-set(gRPC_ZLIB_PROVIDER "package" CACHE STRING "Provider of zlib library")
-set(gRPC_CARES_PROVIDER "package" CACHE STRING "Provider of c-ares library")
-set(gRPC_RE2_PROVIDER "package" CACHE STRING "Provider of re2 library")
-set(gRPC_SSL_PROVIDER "package" CACHE STRING "Provider of ssl library")
-set(gRPC_PROTOBUF_PROVIDER "package" CACHE STRING "Provider of protobuf library")
-set(gRPC_PROTOBUF_PACKAGE_TYPE "MODULE" CACHE STRING "Algorithm for searching protobuf package")
-set(gRPC_USE_PROTO_LITE ON CACHE BOOL "Use protobuf-lite")
-
-# Unity builds do not work for gRPC...
-set(SAVED_CMAKE_UNITY_BUILD ${CMAKE_UNITY_BUILD})
-set(CMAKE_UNITY_BUILD OFF)
-fetchcontent_declare(
-  gRPC
-  GIT_REPOSITORY https://github.com/grpc/grpc
-  GIT_TAG v1.53.0
-  GIT_SHALLOW TRUE
-  PATCH_COMMAND git apply ${CMAKE_CURRENT_SOURCE_DIR}/grpc.patch  || git apply ${CMAKE_CURRENT_SOURCE_DIR}/grpc.patch  -R --check && echo "Patch does not apply because the patch was already applied."
-  GIT_CONFIG core.shallow-submodules=true
-)
-fetchcontent_makeavailable(gRPC)
-# Reset unity builds to the previous state...
-set(CMAKE_UNITY_BUILD ${SAVED_CMAKE_UNITY_BUILD})
-set(FETCHCONTENT_QUIET ${FETCHCONTENT_QUIET_PREV})
-
-
-set(GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:grpc_cpp_plugin>)
-set(GRPC_INCLUDE_DIR "${grpc_SOURCE_DIR}/include")
 
 # ############### Protobuf generation
 set(FLAY_P4RUNTIME_DIR ${CMAKE_CURRENT_SOURCE_DIR}/control_plane/protobuf)
@@ -78,15 +38,6 @@ add_custom_command(
   COMMENT "Generating Flay Protobuf files."
 )
 
-add_custom_command(
-  OUTPUT ${P4RUNTIME_GRPC_GEN_SRCS} ${P4RUNTIME_GRPC_GEN_HDRS}
-  COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} -I${P4RUNTIME_STD_DIR} -I${P4C_SOURCE_DIR}/control-plane
-          -I${Protobuf_INCLUDE_DIR} --grpc_out ${P4C_BINARY_DIR}/control-plane
-          --plugin=protoc-gen-grpc=${GRPC_CPP_PLUGIN_EXECUTABLE} ${P4RUNTIME_RT_PROTO}
-  DEPENDS ${P4RUNTIME_RT_PROTO} controlplane grpc_cpp_plugin protoc
-  COMMENT "Generating Flay gRPC server."
-)
-
 add_dependencies(flay_runtime_dir controlplane)
 
 add_library(flay_runtime STATIC ${FLAY_P4RUNTIME_INFO_GEN_SRCS})
@@ -99,15 +50,9 @@ set_source_files_properties(
   PROPERTIES COMPILE_FLAGS "-Wno-unused-parameter -Wno-array-bounds -Wno-error"
 )
 
-# Source files for Flay gRPC server.
-set(FLAY_GRPC_SOURCES ${P4RUNTIME_GRPC_GEN_SRCS}
-                      ${CMAKE_CURRENT_SOURCE_DIR}/service/flay_server.cpp
-)
-add_library(flay_grpc STATIC ${FLAY_GRPC_SOURCES})
-target_include_directories(
-  flay_grpc SYSTEM BEFORE PUBLIC ${Protobuf_INCLUDE_DIR} ${GRPC_INCLUDE_DIR}
-)
-target_link_libraries(flay_grpc grpc++)
+include(GRpc)
+p4c_obtain_grpc()
+add_subdirectory(service)
 
 # Source files for flay.
 set(FLAY_SOURCES
